<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.iota.mohammad.myapplication.MainActivity"
        android:orientation="vertical">

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:hint="@string/key"
                android:id="@+id/key_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.5"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="12sp">

            </EditText>

            <EditText
                android:hint="@string/channel"
                android:id="@+id/chan_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="12sp">

            </EditText>

            <Button
                android:id="@+id/btnsave"
                android:text="@string/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/led_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/led" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/led_spinner"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/led">

                </Spinner>

                <ToggleButton
                    android:id="@+id/tgbled"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textOn="@string/toggle_on"
                    android:textOff="@string/toggle_off" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/fan_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fan" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:textSize="12sp"
                    android:id="@+id/fan_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:hint="@string/min_temp" />

                <Spinner
                    android:id="@+id/fan_spinner"
                    android:layout_weight="1.25"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/fan">

                </Spinner>

                <ToggleButton
                    android:id="@+id/tgbfan"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textOn="@string/toggle_on"
                    android:textOff="@string/toggle_off" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/pir_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pir" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pir_e_txt"
                    android:textSize="12sp"
                    android:text="@string/motion"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end">

                </TextView>

                <ToggleButton
                    android:id="@+id/tgbpir"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textOn="@string/toggle_on"
                    android:textOff="@string/toggle_off" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/door_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/door" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/door_e_txt"
                    android:textSize="12sp"
                    android:text="@string/motion"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end">

                </TextView>

                <ToggleButton
                    android:id="@+id/tgbdoor_alert"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textOn="@string/toggle_on"
                    android:textOff="@string/toggle_off" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/door"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/door_remote"
                android:textSize="12sp">

            </TextView>

            <Button
                android:id="@+id/btnopen"
                android:text="@string/door_open"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:textSize="12sp"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:id="@+id/uid_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/uid" />

            <Button
                android:id="@+id/btnregister"
                android:text="@string/register_uid"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btndelete"
                android:text="@string/delete_uid"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>



        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gass_txt_e"
                android:text="@string/gass"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            </TextView>

            <TextView
                android:id="@+id/gass_txt"
                android:gravity="center"
                android:text="@string/gass_warning"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temp"
                android:textAlignment="center"/>

            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/tempchart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5">

            </lecho.lib.hellocharts.view.LineChartView>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#ff7800"
            android:text="@string/update"
            android:id="@+id/updateTempChartButton"
            android:textColor="#ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textAlignment="center"/>

            <lecho.lib.hellocharts.view.LineChartView
                android:id="@+id/humiditychart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5">

            </lecho.lib.hellocharts.view.LineChartView>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#ac08f0"
            android:text="@string/update"
            android:id="@+id/updateHumidChartButton"
            android:textColor="#ffffff" />
    </LinearLayout>

        <!--TabHost
            android:layout_margin="5dp"
            android:id="@+id/tabhost"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/colorAccent">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:layout_weight="1"
                            android:background="#ff7800"
                            android:text="@string/update"
                            android:id="@+id/updateTempChartButton"
                            android:textColor="#ffffff" />


                        <lecho.lib.hellocharts.view.LineChartView
                            android:id="@+id/tempchart"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5">

                        </lecho.lib.hellocharts.view.LineChartView>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/colorPrimary">

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:layout_weight="1"
                            android:background="#ac08f0"
                            android:text="@string/update"
                            android:id="@+id/updateHumidChartButton"
                            android:textColor="#ffffff" />

                        <lecho.lib.hellocharts.view.LineChartView
                            android:id="@+id/humiditychart"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5">

                        </lecho.lib.hellocharts.view.LineChartView>

                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </TabHost!-->


</ScrollView>